# Contact2Sale-Desafio

./: .gitignore  README.md
cars-client/: .env.example  .gitignore  README.md  main.py  pyproject.toml
cars-client/src/: main.py
cars-client/src/client/: chat_handler.py  llm.py  mcp_client.py  message.py
cars-client/src/client/providers/: antropic_llm_provider.py
cars-client/src/client/strings/: messages.py  prompts.py
cars-client/src/config/: settings.py
cars-client/src/interfaces/: llm_interface.py
cars-client/tests/: test_Chat.py  test_LLM.py
cars-server/: .env.example  .gitignore  README.md  cars.py  create_fake_registry.py  database.py  main.py  populate_db.py  pyproject.toml  requirements.txt
cars-server/config/: db_config.py  logger.py
cars-server/src/: car_repository.py  car_service.py  file_handler.py  utils.py
cars-server/src/config/: db_config.py  logger.py
cars-server/tests/: test_create_pdf_repository.py  test_query.py
