[project]
name = "cars-server"
version = "0.1.0"
description = "MCP Server for MongoDB access to search cars"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=37.4.2",
    "fpdf2>=2.8.3",
    "mcp[cli]>=1.11.0",
    "pymongo>=4.13.2",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
]
